# colab-interview-transcription

./: .gitignore  Interview_Transcription_Diarization.ipynb  README.md  pyproject.toml
notebooks/: Interview_Transcription_Diarization.ipynb
src/interview_transcription/: __init__.py  auth.py  config.py  format.py  pipeline.py  postprocess.py  transcribe.py
